compiler/crates/graphql-ir/tests/parse/fixtures/enum-values.invalid.expected
==================================== INPUT ====================================
# expected-to-throw
query EnumValueQuery1 {
  me {
    profilePicture(preset: "LARGE") {
      # error: string not enum
      uri
    }
  }
}

query EnumValueQuery2 {
  me {
    profilePicture(preset: 128) {
      # error: int not enum
      uri
    }
  }
}

query EnumValueQuery3 {
  me {
    profilePicture(preset: [LARGE]) {
      # error: list of enum, not enum
      uri
    }
  }
}
==================================== ERROR ====================================
✖︎ Expected value of type 'PhotoSize' to be a valid enum value, got string. Consider removing quotes.

  enum-values.invalid.graphql:4:28
    3 │   me {
    4 │     profilePicture(preset: "LARGE") {
      │                            ^^^^^^^
    5 │       # error: string not enum


✖︎ Expected a value of type 'PhotoSize'

  enum-values.invalid.graphql:13:28
   12 │   me {
   13 │     profilePicture(preset: 128) {
      │                            ^^^
   14 │       # error: int not enum


✖︎ Expected a value of type 'PhotoSize'

  enum-values.invalid.graphql:22:28
   21 │   me {
   22 │     profilePicture(preset: [LARGE]) {
      │                            ^^^^^^^
   23 │       # error: list of enum, not enum
